@@ -49,6 +49,9 @@ class Net::SSLeay {
   
   native method set_tlsext_status_type : long  ($type : int);
   
+  # This method is not documented in OpenSSL, but Perl's IO::Socket::SSL needs this method
+  native method set_SSL_CTX : Net::SSLeay::SSL_CTX ($ctx : Net::SSLeay::SSL_CTX);
+  
   native method DESTROY : void ();
   
 }
