@@ -13,6 +13,7 @@
     * Add Net::SSLeay#alert_desc_string_long method.
     * Add Net::SSLeay::EC_KEY#free method.
     * Add Net::SSLeay::EC_KEY#new_by_curve_name method.
+    * Add Net::SSLeay#set_SSL_CTX method.
 0.009 2024-11-08
   [Requirement Changes]
     * Require SPVM 0.990029.
